bynkc/tests/fixtures/negative/247_stream_not_comparable/input.bynk
commons c {
  -- A `Stream[T]` is a live value-over-time source, not a comparable value.
  fn same(xs: List[Int]) -> Bool {
    Stream.of(xs) == Stream.of(xs)
  }
}
